# alemavintage

./: .env-docker  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  dump.sql  kubernetes.sh  models.md  podman.sh
.sqlx/: query-0074a84e7e2bf8bd0f8d9ee159f0a74382706678de66660f7b4132c1b9b200d5.json  query-038aa15082bf3a42f21a0a53b70f2fcaa9c55dbc09b7f50eafcfad3d5dbb2e1c.json  query-0415854a645d2b1c5cbf4f9e57f920f2c3a274f8a176d08cfd9444e188a1ad78.json  query-04c201b26bf8d5ca1060774f757be509a6bdcb3496e85788ab14ca0461ccddd7.json  query-089a389775ad22047fd07e81881503b482a53feccffdf1b4767890e6362ecd71.json  query-0a05103411c2388620c9e926647e1caa6b59c6319d96e5d00cd5b9a6d14fd47e.json  query-0ef7f39eac72d14f49162dbfee38889216b3c17b7467a05a0034b32a1b221fed.json  query-1387e0087b2c5985eb8194b80910ef5b04bb59ec977b3b05f6d81bf4fc8f3ad8.json  query-15864507bdfc440ef8e5508b3eec8a3fc215cdb267394cfd79a9f44b531b2916.json  query-197f6ae572bbc05825769b6f235f49043ccbea6dd0803bc7e36f1a225c4610d5.json  query-1f9c0633be76838dfc4429bf05c18ddebcf39cc78dfae5f08418776b1999f765.json  query-21263047e3bbe9830bd283d3d939cd218def738c87da6c864207a8574c9d0c9b.json  query-2258d27cc3294cf4c06baa4381326a14fe58c06dd134071f2980ae33c6e05314.json  query-227eb9a5d883361cae3097584d46b2be42a55946de34a0933a408495b97210e1.json  query-288c573d16bce77b37b935e8d45fc1f4a132140681616c3e03425f63d32a4f13.json  query-29d092e48243691c89aa362beb48cde89028ae79a8d4312df9df190ae8ae2542.json  query-2b96a25d19555954e78c69df0f19ab6ffde396c508f691b017cf947fa0bb88c1.json  query-33b681d2146506145be8dd86a9a5251edd3b7493fd51b3dbdb1f22278cf929ee.json  query-3653ab79014d06c8312dbf470636d11378ac0d120c3f4e6c4bfb5c0e45af72e3.json  query-39c05b7d7d2f996572768161b8091113865b967ae54b655db1d0562ebc8fc2ef.json  query-40f8ddca8f104f25b28b80bdb6f7e85d3ec1b11464958b8c7cec243be3577c67.json  query-4191ea619e75f7daf0a21730d71efa22ae730f8f9cf0d8527c517f31124aa9e8.json  query-457a1a23c6485b2267cfc438102e0f2e5a7e412f4bd2d973469ce19ddd32f800.json  query-46478f284b7c13ae7d90f5e114f00d25c61ac56616015c316f40759ac34925f4.json  query-4a15abd74736ebca7c5f66e07cfe3ac0ec0b75fde91c5b6941c30136dda80bd0.json  query-4f79f5e1bda15c77455700e12bf65dd0de8d95a635a630e0fcf69620efb3884b.json  (+54 more)
frontend/: package-lock.json  (+3 more)
(+164 files in other folders)
